--- a/deno.jsonc
+++ b/deno.jsonc
@@ -5,16 +5,16 @@
   "exports": "./mod.ts",
   "lock": false,
   "imports": {
-    "@std/assert": "jsr:@std/assert@^1.0.10",
+    "@std/assert": "jsr:@std/assert@^1.0.10"
   },
   "tasks": {
     "start": "deno run example.ts",
-    "bench": "deno bench",
-    "test": "deno test --allow-read --allow-env --unstable-kv --unstable-cron --parallel",
+    "bench": "deno bench --allow-env",
+    "test": "deno test --allow-read --allow-env --unstable-kv --unstable-cron --parallel"
   },
   "lint": {
     "rules": {
-      "tags": ["recommended"],
-    },
-  },
+      "tags": ["recommended"]
+    }
+  }
 }
