--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,20 +1,20 @@
 {
   "name": "@quarzo-life/moneta",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "license": "MIT",
   "exports": "./mod.ts",
   "lock": false,
   "imports": {
-    "@std/assert": "jsr:@std/assert@^1.0.10"
+    "@std/assert": "jsr:@std/assert@^1.0.10",
   },
   "tasks": {
     "start": "deno run example.ts",
     "bench": "deno bench --allow-env",
-    "test": "deno test --allow-read --allow-env --unstable-kv --unstable-cron --parallel"
+    "test": "deno test --allow-read --allow-env --unstable-kv --unstable-cron --parallel",
   },
   "lint": {
     "rules": {
-      "tags": ["recommended"]
-    }
-  }
+      "tags": ["recommended"],
+    },
+  },
 }
