--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,16 +1,16 @@
 {
   "name": "@quarzo-life/moneta",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "license": "MIT",
   "exports": "./mod.ts",
   "lock": false,
   "imports": {
-    "@std/assert": "jsr:@std/assert@^1.0.16",
+    "@std/assert": "jsr:@std/assert@^1.0.17",
   },
   "tasks": {
     "start": "deno run example.ts",
     "bench": "deno bench --allow-env",
-    "test": "deno test --allow-read --allow-env --unstable-kv --unstable-cron --parallel",
+    "test": "deno test --parallel",
   },
   "lint": {
     "rules": {
